--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
 
     /* Linting */
     "strict": false,
+    "noEmitOnError": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
